<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/conversation_list"
        android:icon="@drawable/bottom_conversation_menu_selector"
        android:title="@string/app_title_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/contact"
        android:icon="@drawable/bottom_contact_menu_selector"
        android:title="@string/app_title_contact" />
    <item
        android:id="@+id/workspace"
        android:icon="@drawable/bottom_work_menu_selector"
        android:title="@string/app_title_workspace" />
    <item
        android:id="@+id/discovery"
        android:icon="@drawable/bottom_discovery_menu_selector"
        android:title="@string/app_title_discover" />
    <item
        android:id="@+id/me"
        android:icon="@drawable/bottom_me_menu_selector"
        android:title="@string/app_title_me" />

</menu>