<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/themeOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:title="@string/theme" />

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/languageOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:title="@string/language" />

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/fontSizeOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:show_divider="false"
            app:title="@string/font_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/privacySettingOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:show_divider="false"
            app:title="@string/privacy_setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/backupAndRestoreOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:show_divider="false"
            app:title="@string/backup_and_restore" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/aboutOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:title="@string/about" />

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/diagnoseOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:title="@string/diagnose" />

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/uploadLogOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:title="@string/upload_log" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/batteryOptionItemView"
            style="@style/OptionItem"
            app:show_arrow_indicator="true"
            app:show_divider="true"
            app:title="@string/battery_optimization" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="@dimen/item_margin_left_and_right"
            android:paddingRight="@dimen/item_margin_left_and_right">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_alive_notification"
                    android:textColor="@color/black1"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_alive_notification_desc"
                    android:textColor="@color/gray3"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchKeepAlive"
                style="@style/defaultSwitch"
                android:layout_gravity="center_vertical|right" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <View style="@style/Line" />

        <TextView
            android:id="@+id/exitOptionItemView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_option_item"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@color/black1"
            android:textSize="16sp" />

        <View style="@style/Line" />
    </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>